--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,11 +30,11 @@ jobs:
         id: plan
         run: |-
           terraform plan \
-            -var="region=$AWS_REGION" \
-            -var="public_key=${{ secrets.AWS_SSH_KEY_PUBLIC }}" \
-            -var="private_key=${{ secrets.AWS_SSH_KEY_PRIVATE }}" \
-            -var="key_name=deployer-key" \
-            -out=PLAN
+          -var="region=$AWS_REGION"
+          -var="public_key=$PUBLIC_SSH_KEY" \
+          -var="private_key=$PRIVATE_SSH_KEY" \
+          -var="key_name=deployer-key"
+          -out=PLAN
         working-directory: ./terraform
       - name: Terraform apply
         id: apply
