destroyed profiles and plan

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,8 @@ jobs:
           -out=PLAN
         working-directory: ./terraform
       - name: Terraform apply
-        id: apply
-        run: terraform apply PLAN
-        working-directory: ./terraform
+        id: replace
+        run: terraform state rm aws_iam_instance_profile.ec2-profile
+      - name: Terraform destroy
+        id: destroy
+        run: terraform destroy
