--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,21 +22,24 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_wrapper: false
-      - name: Terraform init
-        id: init
-        run: terraform init -backend-config="bucket=$TF_STATE_BUCKET_NAME" -backend-config="region=us-east-1"
-        working-directory: ./terraform
-      - name: Terraform plan
-        id: plan
-        run: |-
-          terraform plan \
-          -var="region=$AWS_REGION" \
-          -var="public_key=$PUBLIC_SSH_KEY" \
-          -var="private_key=$PRIVATE_SSH_KEY" \
-          -var="key_name=deployer-key" \
-          -out=PLAN
-        working-directory: ./terraform
-      - name: Terraform apply
-        id: apply
-        run: terraform apply PLAN
-        working-directory: ./terraform
+      # - name: Terraform init
+      #   id: init
+      #   run: terraform init -backend-config="bucket=$TF_STATE_BUCKET_NAME" -backend-config="region=us-east-1"
+      #   working-directory: ./terraform
+      # - name: Terraform plan
+      #   id: plan
+      #   run: |-
+      #     terraform plan \
+      #     -var="region=$AWS_REGION" \
+      #     -var="public_key=$PUBLIC_SSH_KEY" \
+      #     -var="private_key=$PRIVATE_SSH_KEY" \
+      #     -var="key_name=deployer-key" \
+      #     -out=PLAN
+      #   working-directory: ./terraform
+      # - name: Terraform apply
+      #   id: apply
+      #   run: terraform apply PLAN
+      #   working-directory: ./terraform
+      - name: delete
+        id: destroy
+        run: terraform destroy
