--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,20 +26,19 @@ jobs:
         id: init
         run: terraform init -backend-config="bucket=$TF_STATE_BUCKET_NAME" -backend-config="region=us-east-1"
         working-directory: ./terraform
-      - name: Terraform plan
-        id: plan
-        run: |-
-          terraform plan \
-          -var="region=$AWS_REGION" \
-          -var="public_key=$PUBLIC_SSH_KEY" \
-          -var="private_key=$PRIVATE_SSH_KEY" \
-          -var="key_name=deployer-key" \
-          -out=PLAN
-        working-directory: ./terraform
-      - name: Terraform apply
-        id: apply
-        run: terraform apply PLAN
-        working-directory: ./terraform
-      # - name: delete
-      #   id: destroy
-      #   run: terraform destroy
+      - name: hi
+        run: terraform state rm aws_iam_instance_profile.ec2-profile
+      # - name: Terraform plan
+      #   id: plan
+      #   run: |-
+      #     terraform plan \
+      #     -var="region=$AWS_REGION" \
+      #     -var="public_key=$PUBLIC_SSH_KEY" \
+      #     -var="private_key=$PRIVATE_SSH_KEY" \
+      #     -var="key_name=deployer-key" \
+      #     -out=PLAN
+      #   working-directory: ./terraform
+      # - name: Terraform apply
+      #   id: apply
+      #   run: terraform apply PLAN
+      #   working-directory: ./terraform
