deploying app code

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,3 +40,5 @@ jobs:
         id: apply
         run: terraform apply PLAN
         working-directory: ./terraform
+  deploy-app:
+    runs-on: ubuntu-latest
