--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
       #   working-directory: ./terraform
       - name: delete
         id: destroy
-        run: terraform destroy --auto-approve
+        run: terraform destroy
         working-directory: ./terraform
   # deploy-app:
   #   runs-on: ubuntu-latest
