--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,9 @@ jobs:
           -var="key_name=deployer-key" \
           -out=PLAN
         working-directory: ./terraform
+      - name: Verify Terraform outputs
+        run: terraform output instance_public_ip
+        working-directory: ./terraform
       - name: Terraform apply
         id: apply
         run: terraform apply PLAN
