--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Set outputs
         id: set-ip
         run: |-
-          echo "instance_public_ip=$(terraform output instance_public_ip)" >> $GITHUB_OUTPUT
+          echo "$(terraform output instance_public_ip)"
       # - name: delete
       #   id: destroy
       #   run: |-
