--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,8 +44,8 @@ jobs:
         working-directory: ./terraform
       - name: Set outputs
         id: set-ip
-        run: |-
-          echo "$(terraform output instance_public_ip)"
+        run: echo "::set-output name=instance_public_ip::$(terraform output instance_public_ip)" >> $GITHUB_ENV
+        working-directory: ./terraform
       # - name: delete
       #   id: destroy
       #   run: |-
