--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,8 @@ jobs:
         id: set-ip
         run: echo "::set-output name=instance_public_ip::$(terraform output instance_public_ip)" >> $GITHUB_ENV
         working-directory: ./terraform
+      - name: check output
+        run: echo $GITHUB_ENV
       # - name: delete
       #   id: destroy
       #   run: |-
