--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -95,6 +95,11 @@ jobs:
             sudo apt update
             sudo apt install docker.io -y
             sudo apt install awscli -y
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
+            sudo docker --version
+            sudo aws --version
             sudo $(aws ecr get-login --no-include-email --region us-east-1);
             sudo docker stop myappcontainer || true
             sudo docker rm myappcontainer || true
