--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,6 +94,7 @@ jobs:
           script: |-
             sudo apt update
             sudo apt install docker.io -y
+            sudo apt-get update
             sudo apt install awscli -y
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
