--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,6 +91,6 @@ jobs:
             unzip awscliv2.zip
             sudo ./aws/install
             aws --version
-            sudo aws ecr get-login --no-include-email --region us-east-1
+            sudo $(aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 590183935524.dkr.ecr.us-east-1.amazonaws.com);
             sudo docker pull $REGISTRY/$REPOSITORY:$IMAGE_TAG
             sudo docker run -d --name myappcontainer -p 3000:3000 $REGISTRY/$REPOSITORY:$IMAGE_TAG
