--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,13 +84,11 @@ jobs:
           script: |-
             sudo apt update
             sudo apt install docker.io -y
-            sudo apt-get update
-            sudo apt install awscli -y
             sudo apt install unzip curl -y
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
             unzip awscliv2.zip
             sudo ./aws/install
             aws --version
-            sudo $(aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 590183935524.dkr.ecr.us-east-1.amazonaws.com);
+            sudo $(aws ecr get-login --no-include-email --region us-east-1);
             sudo docker pull $REGISTRY/$REPOSITORY:$IMAGE_TAG
             sudo docker run -d --name myappcontainer -p 3000:3000 $REGISTRY/$REPOSITORY:$IMAGE_TAG
