--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -89,6 +89,8 @@ jobs:
             unzip awscliv2.zip
             sudo ./aws/install
             aws --version
-            sudo $(aws ecr get-login --no-include-email --region us-east-1);
+            sudo $(aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $REGISTRY);
+            sudo docker stop myappcontainer || true
+            sudo docker rm myappcontainer || true
             sudo docker pull $REGISTRY/$REPOSITORY:$IMAGE_TAG
             sudo docker run -d --name myappcontainer -p 3000:3000 $REGISTRY/$REPOSITORY:$IMAGE_TAG
